# python-telegram-bot-template

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  flake.nix  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: b1170ff4029d_user_table.py
rustlib/: Cargo.toml  pyproject.toml  rustlib.pyi
rustlib/src/: lib.rs
src/: main.py  settings.py
src/bot/: application.py  context.py  errors.py  extractors.py
src/bot/common/: callback.py  context.py  conversation.py  wrappers.py
src/db/: config.py  core.py  dao.py  encoders.py  models.py  tables.py
src/user/: handlers.py  persistence.py
tests/: test_lib.py  test_persistence.py
